update correct information in page

--- a/public/index.html
+++ b/public/index.html
@@ -25,39 +25,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45799926-9"></script>
-    <script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45799926-9"></script> -->
+    <!-- <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
-    </script>
-    <title>Tô nón lá - Trang trí nón lá Việt với dấu ấn cá nhân</title>
+    </script> -->
+    <title>Tô nón lá - Nơi cùng nhau sáng tạo trên chiếc nón lá Việt Nam</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Trải nghiệm trang trí chiếc nón lá Việt Nam, tạo ra sản phẩm thời trang mang Văn hoá Việt và Dấu ấn của riêng bạn."
     />
-    <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta property="og:site_name" content="Tô nón lá" />
+    <meta property="og:title" content="Nơi cùng nhau sáng tạo trên chiếc nón lá Việt Nam" />
     <meta
       property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Trải nghiệm trang trí chiếc nón lá Việt Nam, tạo ra sản phẩm thời trang mang Văn hoá Việt và Dấu ấn của riêng bạn."
     />
     <meta
       property="og:image"
-      content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png"
+      content="https://ipfs.filebase.io/ipfs/QmTRZXPH5qVfGynLceqWs6qfHMV6anfSEXcGywprv7R5iM"
     />
     <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@owaiswiz" />
-    <meta name="twitter:creator" content="@owaiswiz" />
-    <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages" />
-    <meta
-      name="twitter:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
-    />
-    <meta name="twitter:image"
-    content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" />
     <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -89,6 +79,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
   </body>
 </html>
